swen430as2/tests/valid/null/Null_Valid_3.while
bool eq(null x, null y) {
  return x == y;
}


void main() {
    assert eq(null,null);
}