swen430as2/tests/invalid/casts/Cast_Invalid_2-TC01.while
int f(bool x) {
    return (int) x;
}
